--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>reportng</artifactId>
+            <version>1.2.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
